<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 Pierluca Masala <pierluca.masala@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/normal_margin"
        tools:context="com.example.android.popularmovies.CreditsActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/credits_tmdb_logo_cont_descr"
            android:cropToPadding="true"
            android:src="@drawable/themoviedb_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/credits_tmdb"
            android:textColor="@android:color/black"
            android:textSize="@dimen/credits_disclaimer_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:autoLink="web"
            android:text="@string/credits_tmdb_link"
            android:textSize="@dimen/credits_disclaimer_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/libraries_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/credits_libraries_label_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/picasso"
                android:textColor="@android:color/black"
                android:textSize="@dimen/credits_libraries_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:autoLink="web"
                android:text="@string/picasso_web_site"
                android:textSize="@dimen/credits_libraries_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/okhttp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/credits_libraries_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:autoLink="web"
                android:text="@string/okhttp_web_site"
                android:textSize="@dimen/credits_libraries_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/gson_label"
                android:textColor="@android:color/black"
                android:textSize="@dimen/credits_libraries_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:autoLink="web"
                android:text="@string/gson_web_site"
                android:textSize="@dimen/credits_libraries_text" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>